implemented tickets microservice

--- a/tickets_microservice/src/main/resources/application.properties
+++ b/tickets_microservice/src/main/resources/application.properties
@@ -1,1 +1,4 @@
 spring.application.name=tickets
+server.port=9056
+server.servlet.contextPath=/tickets
+flights.service.url=http://localhost:9055/flights
